kubernetes_action/ingress/app1_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: ingress-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from app1"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: ingress-demo
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
